--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
         </div>
 
         <div class="six">
-            <img src="asset/img/IMG_7465.JPG" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="img/hat.svg" alt="hat" class="hat" />
+            <img src="asset/img/IMG_7465.JPG" alt="profile" class="profile-picture" id="imagePath"/
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
                 <h5 id="wishText">Semoga Tuhan mengabulkan semua do'a kamu ;)</h5>
